# vsync-tool

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  main.c  readme.md  test.c
.github/workflows/: push-master.yml
nvapi/: NvApiDriverSettings.h  nvHLSLExtns.h  nvHLSLExtnsInternal.h  nvShaderExtnEnums.h  nvapi.h  nvapi_lite_common.h  nvapi_lite_d3dext.h  nvapi_lite_salend.h  nvapi_lite_salstart.h  nvapi_lite_sli.h  nvapi_lite_stereo.h
